apps/netcheck/netcheck-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: netcheck
spec:
  type: ClusterIP
  selector:
    app: netcheck
  ports:
    - name: netcheck
      port: 9000
      targetPort: 9000
